archivos_generados/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FUNC", "ID", "NUM", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_expr = 2
    RULE_expr_prima = 3
    RULE_term = 4
    RULE_term_prima = 5
    RULE_factor = 6

    ruleNames =  [ "program", "stat", "expr", "expr_prima", "term", "term_prima", 
                   "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    FUNC=10
    ID=11
    NUM=12
    WS=13
    LINE_COMMENT=14
    BLOCK_COMMENT=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramaContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = gramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = gramaticaParser.ProgramaContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.stat()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 7448) != 0)):
                    break

            self.state = 19
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AsignacionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)


    class SentenciaExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaExpr" ):
                listener.enterSentenciaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaExpr" ):
                listener.exitSentenciaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaExpr" ):
                return visitor.visitSentenciaExpr(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = gramaticaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 29
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = gramaticaParser.AsignacionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self.match(gramaticaParser.ID)
                self.state = 22
                self.match(gramaticaParser.T__0)
                self.state = 23
                self.expr()
                self.state = 24
                self.match(gramaticaParser.T__1)
                pass

            elif la_ == 2:
                localctx = gramaticaParser.SentenciaExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.expr()
                self.state = 27
                self.match(gramaticaParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReglaExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(gramaticaParser.TermContext,0)

        def expr_prima(self):
            return self.getTypedRuleContext(gramaticaParser.Expr_primaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReglaExpr" ):
                listener.enterReglaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReglaExpr" ):
                listener.exitReglaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReglaExpr" ):
                return visitor.visitReglaExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = gramaticaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            localctx = gramaticaParser.ReglaExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.term()
            self.state = 32
            self.expr_prima()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_primaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_expr_prima

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VacioExprContext(Expr_primaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.Expr_primaContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVacioExpr" ):
                listener.enterVacioExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVacioExpr" ):
                listener.exitVacioExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVacioExpr" ):
                return visitor.visitVacioExpr(self)
            else:
                return visitor.visitChildren(self)


    class OpSumaRestaContext(Expr_primaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.Expr_primaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(gramaticaParser.TermContext,0)

        def expr_prima(self):
            return self.getTypedRuleContext(gramaticaParser.Expr_primaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpSumaResta" ):
                listener.enterOpSumaResta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpSumaResta" ):
                listener.exitOpSumaResta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpSumaResta" ):
                return visitor.visitOpSumaResta(self)
            else:
                return visitor.visitChildren(self)



    def expr_prima(self):

        localctx = gramaticaParser.Expr_primaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_prima)
        self._la = 0 # Token type
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                localctx = gramaticaParser.OpSumaRestaContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 35
                self.term()
                self.state = 36
                self.expr_prima()
                pass
            elif token in [2, 9]:
                localctx = gramaticaParser.VacioExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReglaTermContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(gramaticaParser.FactorContext,0)

        def term_prima(self):
            return self.getTypedRuleContext(gramaticaParser.Term_primaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReglaTerm" ):
                listener.enterReglaTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReglaTerm" ):
                listener.exitReglaTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReglaTerm" ):
                return visitor.visitReglaTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = gramaticaParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        try:
            localctx = gramaticaParser.ReglaTermContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.factor()
            self.state = 42
            self.term_prima()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term_primaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_term_prima

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VacioTermContext(Term_primaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.Term_primaContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVacioTerm" ):
                listener.enterVacioTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVacioTerm" ):
                listener.exitVacioTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVacioTerm" ):
                return visitor.visitVacioTerm(self)
            else:
                return visitor.visitChildren(self)


    class OpMulDivModContext(Term_primaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.Term_primaContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(gramaticaParser.FactorContext,0)

        def term_prima(self):
            return self.getTypedRuleContext(gramaticaParser.Term_primaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpMulDivMod" ):
                listener.enterOpMulDivMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpMulDivMod" ):
                listener.exitOpMulDivMod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpMulDivMod" ):
                return visitor.visitOpMulDivMod(self)
            else:
                return visitor.visitChildren(self)



    def term_prima(self):

        localctx = gramaticaParser.Term_primaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term_prima)
        self._la = 0 # Token type
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 7]:
                localctx = gramaticaParser.OpMulDivModContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0)):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 45
                self.factor()
                self.state = 46
                self.term_prima()
                pass
            elif token in [2, 3, 4, 9]:
                localctx = gramaticaParser.VacioTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NumeroContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(gramaticaParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumero" ):
                listener.enterNumero(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumero" ):
                listener.exitNumero(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class FuncionTrigContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(gramaticaParser.FUNC, 0)
        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionTrig" ):
                listener.enterFuncionTrig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionTrig" ):
                listener.exitFuncionTrig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionTrig" ):
                return visitor.visitFuncionTrig(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.FactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentesis" ):
                listener.enterParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentesis" ):
                listener.exitParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)


    class UnarioContext(FactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramaticaParser.FactorContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def factor(self):
            return self.getTypedRuleContext(gramaticaParser.FactorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnario" ):
                listener.enterUnario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnario" ):
                listener.exitUnario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnario" ):
                return visitor.visitUnario(self)
            else:
                return visitor.visitChildren(self)



    def factor(self):

        localctx = gramaticaParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                localctx = gramaticaParser.FuncionTrigContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(gramaticaParser.FUNC)
                self.state = 52
                self.match(gramaticaParser.T__7)
                self.state = 53
                self.expr()
                self.state = 54
                self.match(gramaticaParser.T__8)
                pass
            elif token in [11]:
                localctx = gramaticaParser.VariableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(gramaticaParser.ID)
                pass
            elif token in [12]:
                localctx = gramaticaParser.NumeroContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.match(gramaticaParser.NUM)
                pass
            elif token in [8]:
                localctx = gramaticaParser.ParentesisContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.match(gramaticaParser.T__7)
                self.state = 59
                self.expr()
                self.state = 60
                self.match(gramaticaParser.T__8)
                pass
            elif token in [3, 4]:
                localctx = gramaticaParser.UnarioContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 63
                self.factor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





